--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.6.15"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 nox = "^2022.1.7"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
