build: deprecate python 3.6 and 3.7
bump pytest -> v8
bump nox -> v2024
bump flake8 -> v7

Update ci-pipeline actions and use caching

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.6, 3.7, 3.8, 3.9]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
+      - name: Install poetry
+        run: pipx install poetry
+
 
       - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
+          cache: 'poetry'
 
       - name: Install Dependencies
-        run: pip install nox poetry
+        run: poetry install
 
       - name: Run tests with Nox
-        run: nox -s lint tests
+        run: poetry run nox -s lint tests
