--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,15 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+
+    - name: Install poetry
+      run: pipx install poetry
+
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.8'
+        python-version: '3.12'
+        cache: 'poetry'
+
     - name: Install dependencies
-      run: pip install nox poetry
+      run: poetry install
+
     - name: Run tests
-      run: nox -s tests
+      run: poetry nox -s tests
     - name: Publish package
       run: |
         poetry config repositories.packagr ${{ secrets.PACKAGR_REPOSITORY_URL }}
