--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [tool.poetry]
 name = "dtm"
-version = "0.2.1"
+version = "0.2.2"
 description = ""
 authors = ["tovop <pev@sevassp.com>",
            "EBGlom <ebg@sevassp.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6.15"
+python = ">=3.8.1, < 3.13"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-nox = "^2022.1.7"
-flake8 = "^4.0.1"
+pytest = "^8.3.2"
+nox = "^2024.4.15"
+flake8 = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
