--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = ">=3.8.1, < 3.13"
 pytest = "^8.3.2"
 nox = "^2024.4.15"
 flake8 = "^7.1.1"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
